--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,38 @@
 {
   "name": "timeXoneSyncer",
+  "type": "module",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Bishal Neupane",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "watch": "tsc -w",
+    "dev": "nodemon dist/index.js",
+    "start": "node dist/index.js",
+    "start2": "ts-node src/index.ts",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.3",
+    "@types/ioredis": "^4.26.4",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.3.1",
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
+    "ts-jest": "^26.5.6",
+    "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "apollo-server-express": "^2.24.1",
+    "connect-redis": "^5.2.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "graphql": "^15.5.0",
+    "ioredis": "^4.27.2",
+    "pg": "^8.6.0",
+    "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.32"
+  }
 }
