--- a/.github/workflows/simple.test.yaml
+++ b/.github/workflows/simple.test.yaml
@@ -21,8 +21,8 @@ jobs:
 
       - name: Install dependecies
         working-directory: 'backend/'
-        run: npm ci
+        run: yarn install
 
       - name: Run Tests
         working-directory: 'backend/'
-        run: npm test
+        run: yarn test
