--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -1,17 +1,13 @@
 name: Node.js CI
 
 on:
-  push:
-    branches: [master]
-    paths:
-      - 'backend/**'
   pull_request:
     branches: [master]
     paths:
       - 'backend/**'
 
 jobs:
-  build:
+  Test:
     runs-on: ubuntu-latest
 
     steps:
