--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
     "dev": "nodemon dist/index.js",
     "start": "node dist/index.js",
     "start2": "ts-node src/index.ts",
-    "test": "jest"
+    "test": "jest --runInBand --detectOpenHandles --forceExit "
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
