--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -5,6 +5,10 @@ on:
     branches: [master]
     paths:
       - 'backend/**'
+  push:
+    branches: [master]
+    paths:
+      - 'backend/**'
 
 jobs:
   Test:
@@ -22,3 +26,17 @@ jobs:
       - name: Run Tests
         working-directory: 'backend/'
         run: yarn test
+
+  Deploy:
+    needs: Test
+    defaults:
+      run:
+        working-directory: 'backend/'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: 'timeXoneSyncer'
+          heroku_email: 'neupanebishal07@gmail.com'
