--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -38,5 +38,5 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: 'timeXoneSyncer'
+          heroku_app_name: 'timexonesyncer'
           heroku_email: 'neupanebishal07@gmail.com'
