--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon dist/index.js",
     "start": "node dist/index.js",
     "start2": "ts-node src/index.ts",
+    "build": "tsc",
     "test": "jest --runInBand --detectOpenHandles --forceExit "
   },
   "devDependencies": {
