--- a/.github/workflows/integerate.yaml
+++ b/.github/workflows/integerate.yaml
@@ -4,7 +4,8 @@ on:
   pull_request:
     branches: [master]
     paths:
-      - 'backend/'
+      - 'backend/**'
+      - 'backend/*'
 
 jobs:
   testPullRequest:
