--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,6 +3,10 @@ name: Heroku Continuous Deployment
 on:
   push:
     branches: [master]
+    paths:
+      - 'backend/**'
+      - '.github/workflows/deploy.yaml'
+      - 'backend/*'
 
 jobs:
   deploy:
@@ -19,13 +23,4 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: ${{secrets.HEROKU_APP_NAME}} #Must be unique in Heroku
           heroku_email: ${{secrets.HEROKU_EMAIL}}
-          justlogin: true
-
-      - name: 'Login to heroku registry'
-        run: heroku container:login
-
-      - name: 'Build and push to heroku registry'
-        run: heroku container:push web --app ${{secrets.HEROKU_APP_NAME}}
-
-      - name: 'Releases the container'
-        run: heroku container:release web --app ${{secrets.HEROKU_APP_NAME}}
+          usedocker: true
