--- a/.github/workflows/integerate.yaml
+++ b/.github/workflows/integerate.yaml
@@ -3,6 +3,10 @@ name: Node.js Continuous Integeration
 on:
   pull_request:
     branches: [master]
+    paths:
+      - 'backend/**'
+      - '.github/workflows/deploy.yaml'
+      - 'backend/*'
 
 jobs:
   testPullRequest:
