--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "timeXoneSyncer",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "author": "Bishal Neupane",
   "license": "MIT",
