--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,17 +16,27 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
+    "@babel/preset-typescript": "^7.13.0",
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
     "@storybook/react": "^6.2.9",
     "@tailwindcss/postcss7-compat": "^2.1.2",
+    "@types/jest": "^26.0.23",
+    "@types/luxon": "^1.26.5",
     "autoprefixer": "^9.0.0",
-    "cypress": "^7.3.0",
+    "cypress": "^7.4.0",
+    "eslint": "^7.27.0",
+    "eslint-plugin-cypress": "^2.11.3",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^26.6.3",
+    "luxon": "^1.27.0",
     "postcss": "8",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^6.7.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
   }
 }
