--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.2.1",
+    "autoprefixer": "9",
     "next": "10.2.2",
+    "postcss": "7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "tailwind-scrollbar": "^1.3.0"
+    "tailwind-scrollbar": "^1.3.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
@@ -27,7 +30,6 @@
     "@types/jest": "^26.0.23",
     "@types/luxon": "^1.26.5",
     "@types/react-responsive": "^8.0.2",
-    "autoprefixer": "^9.0.0",
     "cypress": "^7.4.0",
     "eslint": "^7.27.0",
     "eslint-plugin-cypress": "^2.11.3",
@@ -35,11 +37,9 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
     "luxon": "^1.27.0",
-    "postcss": "8",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^6.7.0",
     "react-responsive": "^8.2.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
   }
