--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@types/jest": "^26.0.23",
     "@types/luxon": "^1.26.5",
     "@types/react-responsive": "^8.0.2",
+    "@types/react-slick": "^0.23.4",
     "cypress": "^7.4.0",
     "eslint": "^7.27.0",
     "eslint-plugin-cypress": "^2.11.3",
