--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "postcss": "7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "tailwind-scrollbar": "^1.3.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   },
