--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -6,8 +6,8 @@
   "license": "MIT",
   "scripts": {
     "watch": "tsc -w",
-    "dev": "nodemon dist/index.js",
-    "start": "node dist/index.js",
+    "dev": "tsnd --respawn src/index.ts",
+    "start": "tsc && node dist/index.js",
     "start2": "ts-node src/index.ts",
     "build": "tsc",
     "test": "jest --runInBand --detectOpenHandles --forceExit "
@@ -18,19 +18,27 @@
     "@types/ioredis": "^4.26.4",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.3.1",
+    "@types/passport": "^1.0.6",
+    "@types/passport-facebook": "^2.1.10",
+    "@types/passport-google-oauth20": "^2.0.8",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "ts-jest": "^26.5.6",
+    "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   },
   "dependencies": {
     "apollo-server-express": "^2.24.1",
     "connect-redis": "^5.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "graphql": "^15.5.0",
     "ioredis": "^4.27.2",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.6.0",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.32"
