--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -19,6 +19,7 @@
     "@types/jest": "^26.0.23",
     "@types/node": "^15.3.1",
     "@types/passport": "^1.0.6",
+    "@types/passport-discord": "^0.1.3",
     "@types/passport-facebook": "^2.1.10",
     "@types/passport-google-oauth20": "^2.0.8",
     "jest": "^26.6.3",
@@ -32,12 +33,14 @@
     "axios": "^0.21.1",
     "connect-redis": "^5.2.0",
     "cors": "^2.8.5",
+    "discord-oauth2": "^2.6.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "graphql": "^15.5.0",
     "ioredis": "^4.27.2",
     "passport": "^0.4.1",
+    "passport-discord": "^0.1.4",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.6.0",
