--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -13,6 +13,7 @@
     "test": "jest --runInBand --detectOpenHandles --forceExit "
   },
   "devDependencies": {
+    "@types/connect-redis": "^0.0.16",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
     "@types/ioredis": "^4.26.4",
@@ -33,7 +34,6 @@
     "axios": "^0.21.1",
     "connect-redis": "^5.2.0",
     "cors": "^2.8.5",
-    "discord-oauth2": "^2.6.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
