--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@types/connect-redis": "^0.0.16",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
     "@types/ioredis": "^4.26.4",
@@ -23,6 +24,7 @@
     "@types/passport-discord": "^0.1.3",
     "@types/passport-facebook": "^2.1.10",
     "@types/passport-google-oauth20": "^2.0.8",
+    "cors": "^2.8.5",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "ts-jest": "^26.5.6",
