--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -7,13 +7,19 @@
     "build": "next build",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "generate": "graphql-codegen --config codegen.yaml"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.20",
     "@tailwindcss/line-clamp": "^0.2.1",
     "autoprefixer": "9",
     "axios": "^0.21.1",
+    "graphql": "^15.5.0",
+    "graphql-tag": "^2.12.4",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "10.2.2",
+    "next-apollo": "^5.0.4",
     "postcss": "7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -24,13 +30,19 @@
   "devDependencies": {
     "@babel/core": "^7.14.3",
     "@babel/preset-typescript": "^7.13.0",
+    "@graphql-codegen/cli": "^1.21.5",
+    "@graphql-codegen/typescript": "^1.22.1",
+    "@graphql-codegen/typescript-operations": "^1.18.0",
+    "@graphql-codegen/typescript-react-apollo": "^2.2.5",
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
     "@storybook/react": "^6.2.9",
     "@tailwindcss/postcss7-compat": "^2.1.2",
+    "@types/graphql": "^14.5.0",
     "@types/jest": "^26.0.23",
     "@types/luxon": "^1.26.5",
+    "@types/node": "^15.12.2",
     "@types/react-responsive": "^8.0.2",
     "@types/react-slick": "^0.23.4",
     "cypress": "^7.4.0",
