--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.20",
+    "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/line-clamp": "^0.2.1",
     "autoprefixer": "9",
     "axios": "^0.21.1",
@@ -22,6 +23,7 @@
     "next-apollo": "^5.0.4",
     "postcss": "7",
     "react": "17.0.2",
+    "react-country-flag": "^2.3.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "tailwind-scrollbar": "^1.3.0",
