--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/line-clamp": "^0.2.1",
     "autoprefixer": "9",
     "axios": "^0.21.1",
+    "country-list": "^2.2.0",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.12.4",
     "isomorphic-unfetch": "^3.1.0",
@@ -26,6 +27,7 @@
     "react-country-flag": "^2.3.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-select": "^4.3.1",
     "tailwind-scrollbar": "^1.3.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   },
@@ -41,11 +43,13 @@
     "@storybook/addon-links": "^6.2.9",
     "@storybook/react": "^6.2.9",
     "@tailwindcss/postcss7-compat": "^2.1.2",
+    "@types/country-list": "^2.1.0",
     "@types/graphql": "^14.5.0",
     "@types/jest": "^26.0.23",
     "@types/luxon": "^1.26.5",
     "@types/node": "^15.12.2",
     "@types/react-responsive": "^8.0.2",
+    "@types/react-select": "^4.0.15",
     "@types/react-slick": "^0.23.4",
     "cypress": "^7.4.0",
     "eslint": "^7.27.0",
