Country time zone add

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/line-clamp": "^0.2.1",
     "autoprefixer": "9",
     "axios": "^0.21.1",
+    "countries-and-timezones": "^2.4.0",
     "country-list": "^2.2.0",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.12.4",
@@ -43,6 +44,7 @@
     "@storybook/addon-links": "^6.2.9",
     "@storybook/react": "^6.2.9",
     "@tailwindcss/postcss7-compat": "^2.1.2",
+    "@types/countries-and-timezones": "^2.0.3",
     "@types/country-list": "^2.1.0",
     "@types/graphql": "^14.5.0",
     "@types/jest": "^26.0.23",
