--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -29,6 +29,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-select": "^4.3.1",
+    "react-to-pdf": "^0.0.14",
     "tailwind-scrollbar": "^1.3.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   },
