Firebase messaging setup

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.1",
     "countries-and-timezones": "^2.4.0",
     "country-list": "^2.2.0",
+    "firebase": "^8.6.8",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.12.4",
     "isomorphic-unfetch": "^3.1.0",
