--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -39,6 +39,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "firebase-admin": "^9.10.0",
     "graphql": "^15.5.0",
     "ioredis": "^4.27.2",
     "passport": "^0.4.1",
