--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -20,6 +20,7 @@
     "@types/ioredis": "^4.26.4",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.3.1",
+    "@types/node-schedule": "^1.3.1",
     "@types/passport": "^1.0.6",
     "@types/passport-discord": "^0.1.3",
     "@types/passport-facebook": "^2.1.10",
@@ -34,12 +35,12 @@
   "dependencies": {
     "apollo-server-express": "^2.24.1",
     "axios": "^0.21.1",
+    "class-validator": "^0.13.1",
     "connect-redis": "^5.2.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
-    "firebase-admin": "^9.10.0",
     "graphql": "^15.5.0",
     "ioredis": "^4.27.2",
     "passport": "^0.4.1",
