--- a/packages/frontend/codegen.yaml
+++ b/packages/frontend/codegen.yaml
@@ -4,6 +4,9 @@ documents: "src/graphql/**/*.graphql"
 generates:
   src/generated/graphql.tsx:
     plugins:
-      - "typescript"
-      - "typescript-operations"
-      - "typescript-react-apollo"
+      - typescript
+      - typescript-operations
+      - typescript-react-apollo
+      - named-operations-object
+    config:
+      namePrefix: "gql"
