--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -38,7 +38,9 @@
     "@babel/core": "^7.14.3",
     "@babel/preset-typescript": "^7.13.0",
     "@graphql-codegen/cli": "^1.21.5",
+    "@graphql-codegen/named-operations-object": "^1.18.2",
     "@graphql-codegen/typescript": "^1.22.1",
+    "@graphql-codegen/typescript-document-nodes": "^1.17.15",
     "@graphql-codegen/typescript-operations": "^1.18.0",
     "@graphql-codegen/typescript-react-apollo": "^2.2.5",
     "@storybook/addon-actions": "^6.2.9",
