--- a/backend/package.json
+++ b/backend/package.json
@@ -48,6 +48,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.6.0",
+    "stripe": "^8.160.0",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.32"
   }
